Add callOther func
